--- a/css/cafeteria.css
+++ b/css/cafeteria.css
@@ -104,6 +104,7 @@ footer{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 12pt;
     color: whitesmoke
+    
                                          
 }
 
@@ -121,6 +122,7 @@ footer #end{
     margin-right: 25px ;
     padding-top: 100px;
     padding-bottom: 100px;
+    
 }
 
 /* --------------------formatação da página INDEX------------------------- */
@@ -141,10 +143,9 @@ main #home p{
     (espaçamento entre linhas).Estamos usando uma altura
     de 1,5, ou seja, o tamanho da fonte mais o meio do tamanho
     da fonte */
-
-    /* comando para jutificar caso queira ----> text-align: justify; */
+        /* comando para jutificar caso queira ----> text-align: justify; */
     line-height: 18pt;
-}
+    }
 
 main #imghome img{
     width: 400px;
@@ -171,3 +172,44 @@ main #imghome{
     text-align: center;
 }
 
+/* ---------------formatação da páguna cárdapio------------------------ */
+
+main #categoriacardapio{
+    width: 80%;
+    /* vamos centralizar a caixa
+    modificando a margen da esquerda e da
+    direita com auto de autmático */
+    margin-left: auto;
+    margin-right: auto;
+    /* aplicar a disposição flex, para deixar as imagens
+    uma ao lado da outra */
+    display: flex;
+    /* alinhar o conteudo ao centro */
+    justify-content: center;
+    align-items: center;
+    margin-top: -50px;
+
+}
+
+.itemCardapio img{
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    display: block;
+    box-shadow: 0px 0px 10px rgb(10, 10, 10);
+    margin-bottom: 10px;
+    
+}
+
+.itemCardapio{
+    
+    text-align: center;
+    margin: 15px;
+    
+}
+
+.itemCardapio a{
+    font-family: Arial, Helvetica, sans-serif;
+    text-decoration: none;
+    color: black;
+}
