--- a/css/cafeteria.css
+++ b/css/cafeteria.css
@@ -27,6 +27,8 @@ header{
     height: 400px;
     padding: 35px;
     
+    
+    
 
     
      
@@ -66,6 +68,8 @@ header ul li{
     margin-left: 20px;
     margin-right: 20px;
     padding: 4px;
+    transition: 1s;
+    border-radius: 40%;
    
 }
 header ul li:hover{
@@ -89,7 +93,7 @@ header h2{
     font-family: "Titillium Web", sans-serif;
     font-size: 30pt;
     font-weight: 600;
-    text-shadow: 0px 0px 5px black;
+    text-shadow: 0px 0px 10px black;
 
 }
 header p{
@@ -99,17 +103,18 @@ header p{
     text-align: center;
     margin-left: 200px;
     margin-right: 200px;
-    text-shadow: 0px 0px 5px black;
+    text-shadow: 0px 0px 20px black;
 }
 
 footer{
     background-color: #d6c6f2 ;
     display: flex;
     justify-content: space-between;
-    padding: 0px;
+    padding-left: 35px;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 12pt;
     color: whitesmoke
+    
     
                                          
 }
@@ -125,7 +130,9 @@ footer #redesSociais li{
 
 footer #end{
     /* alinhamento do endereço junto a redes sociais */
-    margin-right: 25px ;
+    
+  
+    margin-right: 30px ;
     padding-top: 100px;
     padding-bottom: 100px;
     
@@ -134,11 +141,14 @@ footer #end{
 /* --------------------formatação da página INDEX------------------------- */
 
 main h2{
-    font-family: "Titillium Web", sans-serif;
+    font-family: "Roboto", sans-serif;
+    font-weight: 700;
+    font-style: normal;
     margin: 50px;
     font-size: pt;
-    text-transform: uppercase;
-    text-shadow: 0px 0px 5px black;
+    text-transform: capitalize;
+    text-align: center;
+    
 }
 
 main #home p{
@@ -344,4 +354,20 @@ input[type=submit]{
     cursor: pointer;
     display: block;
     margin: 20px auto 15px auto;
+}
+
+/* formatação para o contato whatsapp */
+
+#whatsapp{
+    position: fixed;
+    width: 50px;
+    height: 50px;
+    bottom: 40px;
+    right: 75px;
+   
+}
+
+#whatsapp img{
+    width: 100%;
+    
 }
